--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>checker-qual</artifactId>
             <version>1.9.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>muveap</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
