--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
             <version>1.9.4</version>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>muveap</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -55,7 +55,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.mycompany.app.App</mainClass>
+                    <mainClass>com.mymuveapp.app</mainClass>
                     <arguments>
                         <argument>argument1</argument>
                     </arguments>
@@ -74,7 +74,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.mycompany.app.App</mainClass>
+                                    <mainClass>com.mymuveapp.app</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
